# BUILDING-MY-OWN-VECTOR-DB

./: .coverage  .env.example  .gitignore  API_INTEGRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DAY1_README.md  DAY2_README.md  DAY3_README.md  DAY4_README.md  DAY5_README.md  DAY6_README.md  ROADMAP.md  SEARCH_ENGINE_RESEARCH.md  SECURITY.md  benchmark_report_20260205_144942.json  celery_app.py  cluster_config.json  configuration_comparison_20260205_145048.json  docker-compose.yaml  dockerfile  hnsw_index_data.json  ivf_index_data.json  main.py  nginx.conf  prometheus.yml  pyproject.toml  readme.md  requirements.txt  test_hnsw_index.json  test_import.py  test_index.json  test_new_endpoints.py
sdk/: COMPATIBILITY.md  README.md  pyproject.toml
sdk/go/: README.md  go.mod
sdk/go/vectordb/: ann.go  ann_test.go  client.go  collections.go  errors.go  http.go  models.go  multimodal.go  vectordb_edge_cases_test.go  vectordb_integration_test.go  vectors.go
sdk/plugin_sdk/: __init__.py  base_encoder.py  base_index.py  base_storage.py  decorators.py  example_plugin.py
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  lib.rs  models.rs
sdk/rust/tests/: ann_tests.rs
sdk/tests/: conftest.py  test_ann.py  test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: ann.ts  client.ts  collections.ts  errors.ts  http.ts  index.ts  models.ts  multimodal.ts  (+1 more)
sdk/vector_db_client/: __init__.py  _http.py  ann.py  client.py  collections.py  exceptions.py  langchain_vectorstore.py  models.py  multimodal.py  vectors.py
(+292 files in other folders)
