[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vector-db"
version = "1.0.0"
description = "A production-ready vector database built from scratch"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
ignore = ["E501", "F401"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D100", "D101", "D102", "D103"]

[tool.pytest.ini_options]
testpaths = ["test"]
