[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-db-client"
version = "0.1.0"
description = "Python client for the Vector Database multimodal API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0,<0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
langchain = ["langchain-core>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vector_db_client*"]
